--- a/app.css
+++ b/app.css
@@ -35,9 +35,9 @@
 
 .darktheme {
   /* Dark Colors  */
-  --accent: #57a0d9; /* Hover color */
-  --background: #19171a; /* Background color */
-  --cards: #201e21; /* Cards color */
+  --accent: #cb9b6a; /* Hover color */
+  --background: #ddc7a1; /* Background color */
+  --cards: #32302f; /* Cards color */
 
   /* Fonts Color */
   --fg: #d8dee9; /* Foreground color */
