--- a/app.css
+++ b/app.css
@@ -35,9 +35,9 @@
 
 .darktheme {
   /* Dark Colors  */
-  --accent: #cb9b6a; /* Hover color */
+  --accent: #ddc7a1; /* Hover color */
   --background: #32302f; /* Background color */
-  --cards: #ddc7a1; /* Cards color */
+  --cards: #cb9b6a; /* Cards color */
 
   /* Fonts Color */
   --fg: #d8dee9; /* Foreground color */
